--- a/.github/workflows/dotnet-PRbuild.yml
+++ b/.github/workflows/dotnet-PRbuild.yml
@@ -14,13 +14,13 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: '3.1' # Replace with your .NET version
+        dotnet-version: '4.0.30319' # Replace with your .NET version
       
     - name: Restore Dependencies
       run: dotnet restore Task2/AutomationFramework/AutomationFramework.csproj
 
     - name: Build
-      run: dotnet build Task2/AutomationFramework/AutomationFramework.csproj --configuration Release --no-restore
+      run: dotnet build Task2/AutomationFramework/AutomationFramework.csproj
 
     - name: Test
-      run: dotnet test Task2/AutomationFramework/AutomationFramework.csproj --no-build --verbosity normal
+      run: dotnet test Task2/AutomationFramework/AutomationFramework.csproj
